# intensive-otus-22-05

./: .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: django-app.yml
frontend/: package-lock.json
travelRu/: data_info.py  manage.py
travelRu/search_hotels/: apps.py  urls.py  views.py
travelRu/search_hotels/templates/: search_hotels.html
travelRu/templates/: nav.html
travelRu/travelRu/: asgi.py  settings.py  urls.py  wsgi.py
travelRu/waySearch/: apps.py  configuration.py  forms.py  tests.py  urls.py  views.py
travelRu/waySearch/templates/: base.html  index.html  search_avia.html  search_aviatickets.html  search_train.html
travelru/: manage.py
travelru/my_travel/: admin.py  apps.py  models.py  urls.py  views.py
travelru/my_travel/migrations/: 0001_initial.py  0002_auto_20220717_0217.py  0003_auto_20220718_2133.py  0004_alter_item_price.py  0005_item_hotel_city.py  0006_hotel_nights.py  0007_auto_20220721_2127.py  0008_auto_20220721_2231.py  0009_alter_avia_item.py
travelru/my_travel/templates/: my_travel.html
travelru/search_hotels/: admin.py  apps.py  configuration_cities_hotels.py  forms.py  models.py  tests.py  urls.py  views.py  widget.py
travelru/search_hotels/templates/: search_hotels.html
travelru/templates/: base.html  nav.html
travelru/travelru/: asgi.py  settings.py  urls.py  wsgi.py
travelru/waysearch/: admin.py  apps.py  configuration.py  data_ru_airlines.json  forms.py  models.py  test_models.py  tests.py  urls.py  views.py
(+18 files in other folders)
