[tool.poetry]
name = "intensive-otus-22-05"
version = "0.1.0"
description = ""
authors = ["otus_pro_team"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
